--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "dependencies": {
     "angular": "^1.3.15",
+    "angular-route": "^1.3.15",
+    "body-parser": "^1.12.3",
+    "ejs": "^2.3.1",
     "express": "^4.12.3",
     "mongo": "^0.1.0",
     "mongoose": "^4.0.2"
