--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "mongo": "^0.1.0",
-    "mongoose": "^4.0.2"
+    "mongoose": "^4.0.2",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
