--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "angular": "^1.3.15",
     "angular-route": "^1.3.15",
     "body-parser": "^1.12.3",
+    "cookie-parser": "^1.3.5",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
+    "express-session": "^1.11.2",
     "mongo": "^0.1.0",
     "mongoose": "^4.0.2",
     "passport": "^0.2.2",
