--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "angular": "^1.3.15",
     "angular-route": "^1.3.15",
+    "bcrypt": "^0.8.3",
     "body-parser": "^1.12.3",
     "cookie-parser": "^1.3.5",
     "ejs": "^2.3.1",
