--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "express-session": "^1.11.2",
+    "jsonwebtoken": "^5.0.1",
     "mongo": "^0.1.0",
     "mongoose": "^4.0.2",
     "passport": "^0.2.2",
